# BinaryVibes

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: guide.md  research.md  vision.md
examples/: 01_hello_world.py  02_countdown.py  03_env_reader.py  04_file_reader.py  05_file_copy_gui.py  06_weather.py  07_weather_multi_city.py  08_weather_dashboard.py  09_sysinfo.py  10_exit_code.py  README.md  run_all.py
src/binaryvibes/: __init__.py
src/binaryvibes/analysis/: cfg.py  differ.py  disassembler.py  patterns.py  semantics.py  symbols.py
src/binaryvibes/cli/: main.py
src/binaryvibes/core/: arch.py  binary.py
src/binaryvibes/intent/: engine.py
src/binaryvibes/llm/: __init__.py  agent.py  pe_runtime.py  prompts.py  provider.py
src/binaryvibes/synthesis/: assembler.py  generator.py  macho.py  patch_algebra.py  patcher.py  pe.py  transplant.py
src/binaryvibes/verify/: emulator.py
src/binaryvibes/workflows/: analysis.py  audit.py  hardening.py  hooking.py
tests/: conftest.py  test_cli.py  test_cli_expanded.py  test_core.py
tests/fixtures/: multi_func_elf  padded_elf  tiny_elf  vuln_elf
tests/test_analysis/: test_cfg.py  test_differ.py  test_disassembler.py  test_patterns.py  test_semantics.py  test_symbols.py
tests/test_intent/: test_engine.py
tests/test_llm/: test_agent.py  test_prompts.py  test_provider.py
tests/test_synthesis/: test_assembler.py  test_generator.py  test_macho.py  test_patch_algebra.py  test_patcher.py  test_pe.py  test_transplant.py
tests/test_verify/: test_emulator.py  test_emulator_arm64.py
tests/test_workflows/: test_analysis.py  test_audit.py  test_hardening.py  test_hooking.py
