[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binaryvibes"
version = "1.0.0"
description = "AI-native framework for direct binary manipulation — bypassing source code to work at the machine level"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "capstone>=5.0,<6",
    "keystone-engine>=0.9,<1",
    "lief>=0.15,<1",
    "unicorn>=2.0,<3",
    "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
    "binaryvibes[llm]",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.9,<1",
]
llm = [
    "httpx>=0.27,<1",
]

[project.scripts]
bv = "binaryvibes.cli.main:cli"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
